[gd_scene load_steps=2 format=3 uid="uid://d2x8uy0xtdw1q"]

[ext_resource type="Script" path="res://scripts/mode_selector.gd" id="1_m3n4p"]

[node name="ModeSelector" type="PanelContainer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_m3n4p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="VideoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Video Mode"
text = "ðŸŽ¬"
flat = true

[node name="CameraButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Camera Mode"
text = "ðŸ“·"
flat = true

[node name="SubtitlesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Subtitles Mode"
text = "ðŸ’¬"
flat = true

[node name="CompositingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Compositing Mode"
text = "ðŸŽ¨"
flat = true

[node name="LayersButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Layer Manager"
text = "ðŸ“‘"
flat = true

[node name="EffectsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Effects Mode"
text = "âœ¨"
flat = true

[connection signal="pressed" from="VBoxContainer/VideoButton" to="." method="_on_video_mode"]
[connection signal="pressed" from="VBoxContainer/CameraButton" to="." method="_on_camera_mode"]
[connection signal="pressed" from="VBoxContainer/SubtitlesButton" to="." method="_on_subtitles_mode"]
[connection signal="pressed" from="VBoxContainer/CompositingButton" to="." method="_on_compositing_mode"]
[connection signal="pressed" from="VBoxContainer/LayersButton" to="." method="_on_layers_mode"]
[connection signal="pressed" from="VBoxContainer/EffectsButton" to="." method="_on_effects_mode"] 